@@ -11,7 +11,6 @@
  */
 package org.eclipse.che.api.workspace.server.devfile;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Constants {
@@ -24,8 +23,7 @@ public class Constants {
 
   public static final String CURRENT_API_VERSION = "1.0.0";
 
-  public static final List<String> SUPPORTED_VERSIONS =
-      Collections.singletonList(CURRENT_API_VERSION);
+  public static final List<String> SUPPORTED_VERSIONS = List.of(CURRENT_API_VERSION, "2.0.0");
 
   public static final String EDITOR_COMPONENT_TYPE = "cheEditor";
 
